# rat

./: .gitignore  CMakeLists.txt  README.md  a.out  flake.nix
scripts/: build.sh  deploy.sh  mkdisks.sh  mkdocker.sh  mkseed.sh  net.sh  operator.sh  target.sh
src/: CMakeLists.txt  agent.c  c2.c
src/agent/: CMakeLists.txt  main.c  socket.c  socket.h
src/c2/: CMakeLists.txt  main.c  net.c  net.h  socket.c
